# report-factory

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  README.en.md  README.md  SKILL.md  UPLOAD_CHECKLIST.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: test.yml
config/: domain-packs.json
config/domain-packs/: bio-medical.json  climate-tech.json
examples/: sample-arguments-card.md  sample-evidence-card.md
examples/canvas/: sample.canvas
examples/cards/: AIH-A-20260224-01.md  EAI-E-20260224-01.md  EAI-E-20260310-57.md  EAI-E-20260310-63.md
prompts/: detect-domain.md  extract-arguments.md  extract-evidence.md  generate-card.md  validate-card.md
report-factory/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  ppt_exporter.py
report-factory-daily-reviewer/: .gitignore  README.md  SECURITY.md  config.template.json  skill.md
report-factory-reviewer/: .gitignore  README.md  skill.md
report-factory/.claude-plugin/: plugin.json
report-factory/docs/: api.md  setup.md  troubleshooting.md
report-factory/examples/: arguments-card.md  canvas-example.canvas  evidence-card.md
report-factory/knowledge/: ai_pc.md  ai_wearables.md  embodied_ai.md
report-factory/prompts/: extract-arguments.md  extract-evidence.md
report-factory/variants/: SKILL-generic.md  SKILL-optimized.md  SKILL-zh-advanced.md
scripts/: fetch-url.py  rss-harvest.py  setup.py
scripts/integrations/wewerss/: README.md  fetch_weixin.py  fetch_weixin_smart.py  harvest_weixin_rss.py  inbox_harvester.py  morning_harvest.py
src/report_factory/: __init__.py  __main__.py  config.py  detector.py
templates/: arguments.md  evidence.md
