[metadata]
name = report-factory
version = 2.0.0
author = Report Factory Contributors
description = Universal Knowledge Card Factory for Obsidian
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/hoilex04/report-factory
project_urls =
    Bug Tracker = https://github.com/hoilex04/report-factory/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Markup :: Markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    lxml>=5.0.0
    feedparser>=6.0.0
    click>=8.0.0
    rich>=13.0.0
    jsonschema>=4.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    report-factory = report_factory.cli:main
    rf = report_factory.cli:main

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=report_factory"
